Adding macOS (x86, arm64+Rosetta) support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.5)
 project(alchitry_loader)
 
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_OSX_ARCHITECTURES "x86_64")
 
 include_directories(src)
 
@@ -21,8 +22,19 @@ add_executable(alchitry_loader
         src/spi.h
         src/WinTypes.h)
 
+target_link_libraries(alchitry_loader pthread)
 
-target_link_libraries(alchitry_loader
-        ${CMAKE_SOURCE_DIR}/lib/linux/libftd2xx.a
-        ${CMAKE_SOURCE_DIR}/lib/windows/ftd2xx.lib
-        pthread)
+if (APPLE)
+        find_library(IOKIT IOKit REQUIRED)
+        find_library(CORE_FOUNDATION CoreFoundation REQUIRED)
+        target_link_libraries(alchitry_loader
+                objc
+                ${IOKIT}
+                ${CORE_FOUNDATION}
+                ${CMAKE_SOURCE_DIR}/lib/osx/libftd2xx.a)
+elseif(LINUX)
+        target_link_libraries(alchitry_loader ${CMAKE_SOURCE_DIR}/lib/linux/libftd2xx.a)
+else()
+        target_link_libraries(alchitry_loader ${CMAKE_SOURCE_DIR}/lib/windows/ftd2xx.lib)
+endif()
+
